--- a/028_Project.html
+++ b/028_Project.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="028_Project.css" />
   </head>
   <body>
+    
     <div class="container_head">
       <div>
         <img class="header__logo" src="Img/logo.svg" alt="" />
@@ -33,7 +34,7 @@
         </div>
         <a class="descr__link" href="#" class="href"
           >Explore our work
-          <img class="point" src="../Project/Img/link.svg" alt="" />
+          <img class="point" src="Img/link.svg" alt="" />
         </a>
       </div>
     </section>
@@ -63,7 +64,7 @@
       </div>
     </section>
     <section class="about__image">
-      <img class="about__img" src="../Project/Img/about.png" alt="" />
+      <img class="about__img" src="Img/about.png" alt="" />
       <div class="table">
         <div class="counter">
           286
